--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Mifta Sintaha",
   "license": "MIT",
   "dependencies": {
+    "@mui/material": "^5.0.4",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.6",
     "chai": "^4.2.0",
+    "d3": "^7.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "extract-text-webpack-plugin": "^3.0.2",
