--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.6",
     "chai": "^4.2.0",
+    "chartjs": "^0.3.24",
     "d3": "^7.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
