--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.4",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
