--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-addons-test-utils": "^15.6.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.0.0",
     "sass-loader": "^7.1.0",
